2008-02-05  Joseph Myers  <joseph@codesourcery.com>

	* doc/include/texinfo.tex: Update to version 2008-02-04.16.

2008-02-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/33631
	* expr.c (count_type_elements): Give for unions instead of
	guessing.

2008-02-04  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/fixdfdi.h (__fixunstfdi, __fixtfdi): Rearrange
	the overflow check to make it easier to read.
	(__fixtfdi): Change the type of the ll member in union
	long_double to UDItype_x.

2008-02-02  Richard Henderson  <rth@redhat.com>

        PR c/34993
        * tree.c (build_type_attribute_qual_variant): Skip TYPE_DOMAIN
        for unbounded arrays.

2008-02-02  Richard Sandiford  <rsandifo@nildram.co.uk>

	PR target/34981
	* config/mips/mips-protos.h (mips_expand_call): Return an rtx.
	(build_mips16_call_stub): Likewise.
	* config/mips/mips.h (FIRST_PSEUDO_REGISTER): Rename FAKE_CALL_REGNO
	to GOT_VERSION_REGNUM.
	(CALL_REALLY_USED_REGISTERS): Set the GOT_VERSION_REGNUM entry to 0.
	(EPILOGUE_USES): Include GOT_VERSION_REGNUM if TARGET_ABICALLS.
	* config/mips/mips.c (mips_emit_call_insn): New function.
	(mips_call_tls_get_addr): Call mips_expand_call directly.
	(mips_expand_call): Update the call to build_mips16_call_stub
	and remove a redundant condition.  Assert that MIPS16 stubs do not
	use lazy binding.  Use mips_emit_call_insn and return the call insn.
	(override_options): Allow SImode for GOT_VERSION_REGNUM.
	(build_mips16_call_stub): Use mips_emit_call_insn rather than
	emit_call_insn.  Return the call insn or null.
	(mips_avoid_hazard): Remove hazard_set handling.
	(mips_extra_live_on_entry): Include GOT_VERSION_REGNUM if
	TARGET_ABICALLS.
	* config/mips/mips.md (UNSPEC_EH_RECEIVER): Rename to...
	(UNSPEC_RESTORE_GP): ...this.
	(UNSPEC_SET_GOT_VERSION, UNSPEC_UPDATE_GOT_VERSION): New constants.
	(FAKE_CALL_REGNO): Rename to...
	(GOT_VERSION_REGNUM): ...this.
	(type): Add "ghost" value.  Add an associated insn reservation.