@@ -1,3 +1,12 @@
+2008-02-05  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2008-01-17  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/34825
+	* tree-ssa-math-opts.c (is_division_by): Do not recognize
+	x / x as division to handle.
+
 2008-02-05  Joseph Myers  <joseph@codesourcery.com>
 
 	* doc/include/texinfo.tex: Update to version 2008-02-04.16.
